--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -29,35 +29,43 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Computer Science Teaching Assistant
+      institution: University of British Columbia
+      year: Jan. 2023 - present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Teaching assistant for a 2nd year Software Construction course in Java
+        - Teach labs of approximately 30 students, grade labs and assignments
+        - Assisted students by explaining topics and answering their questions both in person and online through a Q&A forum
+#        - title: Description 3.
+#          contents:
+#            - Sub-description 1.
+#            - Sub-description 2.
+    - title: Jump Start Orientation Leader
+      institution: University of British Columbia
+      year: Aug. 2022 - Sep. 2022
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+        - Led a group of 33 first year students through orientation by organizing and facilitating team building activities, workshops, and events
+        - Liaised with faculty fellow to better plan activities to aid their transition to university
+        - Organized, set-up, and facilitated social events and activities
+    - title: Crew Member
+      institution: Wendy's
+      year: July 2021 - June 2022
       description:
+        - Courteously took customer orders and operated the cash register; bagged orders neatly and ensured that all orders were accurate; resolved customer complaints and escalated to manager on duty according to store policies; also responsible for inputting online orders from Skip The Dishes and Uber Eats
+        - Operated grill & fryer; maintained appropriate amount of beef, chicken, and fry products; followed First In, First Out policies to ensure freshness
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+#    - title: Director
+#      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
+#      year: 1917-1933
+#
+#    - title: Professor of Theoretical Physics
+#      institution: Karl-Ferdinand University, Prague, Czechoslovakia
+#      year: 1911 - 1917
+#      description:
+#
+#    - title: Associate Professor of Theoretical Physics
+#      institution: University of Zurich, Zurich, Switzerland
+#      year: 1909 - 1911
 
 - title: Open Source Projects
   type: time_table
