--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -77,7 +77,7 @@
         - Utilized various packages to generate a vCard of the person’s name and contact information in QR code format. Scanning this QR code automatically adds the contact information to the user’s phone
         - Utilized an abstract conversion function to convert human-readable units to pixels to aid in the development process
         - Developed a Flask frontend with HTTP Requests to create a user-friendly experience
-        - Technologies: Python, Segno, Reportlab, Python unittest, Flask, HTML templating, HTTP
+        - "Technologies:" Python, Segno, Reportlab, Python unittest, Flask, HTML templating, HTTP
     - title: InsightUBC (Academic)
       year: Jan. 2023 - Apr. 2023
       description:
@@ -85,10 +85,28 @@
         - Designed a recursive breadth-first-search algorithm to traverse through the recursive structure of HTML files and find all relevant data
         - Utilized regression testing to continually check that changes do not break previously working code
         - Implemented a web frontend using React
-        - Technologies: JavaScript, TypeScript, React, Node.js, Mocha, Chai, JSZip, JSON
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+        - "Technologies:" JavaScript, TypeScript, React, Node.js, Mocha, Chai, JSZip, JSON
+    - title: Blokus DUO (personal)
+      year: Dec. 2022 - Feb. 2023
+      description:
+        - Designed and built a two player version of the popular board game Blokus
+        - Developed an algorithm to sort a user input of a list of coordinates and compare them with each other to validate the input against a database of game pieces
+        - Implemented an efficient way to organize Event Listeners by grouping them into an inner class, improving readability and making it easier to debug the program
+        - Utilized the clone function to resolve the problem that my algorithm needed to modify the user input while also retaining an unmodified copy
+        - Extensively tested the program using unit tests and achieved 80% code coverage
+        - "Technologies:" Java, JUnit, Java Swing
+    - title: Budgeting App (academic)
+      year: Dec. 2022 - Feb. 2023
+      description:
+        - Coded an app that allows users to store and manage their budget
+        - Used the Java Date and Calendar classes in order to reset categories on a monthly basis
+        - Implemented data persistence of all budget data through JSON
+        - Implemented a visual “checkmark” and “X” using ImageIO, which provided clear feedback to the user
+        - Achieved 100% code coverage using JUnit
+        - "Technologies:" Java, JUnit, Java Swing, JSON
+#    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#      year: 2015-now
+#      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
