put quotes around entire Technologies: line

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -77,7 +77,7 @@
         - Utilized various packages to generate a vCard of the person’s name and contact information in QR code format. Scanning this QR code automatically adds the contact information to the user’s phone
         - Utilized an abstract conversion function to convert human-readable units to pixels to aid in the development process
         - Developed a Flask frontend with HTTP Requests to create a user-friendly experience
-        - Technologies Python, Segno, Reportlab, Python unittest, Flask, HTML templating, HTTP
+        - "Technologies: Python, Segno, Reportlab, Python unittest, Flask, HTML templating, HTTP"
     - title: InsightUBC
       year: Jan. 2023 - Apr. 2023
       description:
