--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,12 +1,14 @@
 github_users:
-  - torvalds
-  - alshedivat
+   - theseanx
+#  - torvalds
+#  - alshedivat
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - theseanx/theseanx.github.io
+#  - alshedivat/al-folio
+#  - twbs/bootstrap
+#  - jekyll/jekyll
+#  - jquery/jquery
+#  - FortAwesome/Font-Awesome
+#  - jpswalsh/academicons
+#  - mathjax/MathJax
