add Cruise Ship Check-In Agent work experience

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -29,6 +29,13 @@
 - title: Experience
   type: time_table
   contents:
+    - title: Cruise Ship Check-In Agent
+      institution: Intercruises
+      year: June 2023 - present
+      description:
+        - Courteously greet guests and complete their check in procedure using enterprise Fidelio cruise ship software
+        - Direct disembarking guests to bus transfers, manage line-ups, assist with baggage
+        - Help guests by answering questions and assisting them with wayfinding
     - title: Computer Science Teaching Assistant
       institution: University of British Columbia
       year: Jan. 2023 - present
