updated cruise ship position

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -31,7 +31,7 @@
   contents:
     - title: Cruise Ship Check-In Agent
       institution: Intercruises
-      year: June 2023 - present
+      year: June 2023 - Oct. 2023
       description:
         - Courteously greet guests and complete their check in procedure using enterprise Fidelio cruise ship software
         - Direct disembarking guests to bus transfers, manage line-ups, assist with baggage
